--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 fastapi = "^0.115.5"
 uvicorn = {extras = ["standard"], version = "^0.32.1"}
 py-ulid = "^1.0.3"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 
 [build-system]
