--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ fastapi = "^0.115.5"
 uvicorn = {extras = ["standard"], version = "^0.32.1"}
 py-ulid = "^1.0.3"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+sqlalchemy = "^2.0.36"
+mysqlclient = "^2.2.6"
+alembic = "^1.14.0"
+dependency-injector = "^4.44.0"
 
 
 [build-system]
