--- a/alembic.ini
+++ b/alembic.ini
@@ -9,12 +9,7 @@ script_location = migrations
 # Uncomment the line below if you want the files to be prepended with date and time
 # see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
 # for all available tokens
-
-# 임의의 문자열로 된 파일이 생성된다 > 리비전 파일을 순서대로 확인하기 힘들다. 
-# %%(rev)s: 리비전 ID, 임의의 문자열 생성 
-# %%(slug)s: -m 옵션으로 전달된 문자열을 40자로 자른 문자열
-# %%(epoch)s: datetime.timestamp() 함수로 생성된 유닉스 시간
-file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
+# file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
 
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.
@@ -66,9 +61,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-# Alembic은 수행 과정에서 alembic.ini 파일의 설정값을 읽는다. 
-sqlalchemy.url = mysql+mysqldb://root:test@127.0.0.1/til
-
+sqlalchemy.url = mysql+mysqldb://root:test@127.0.0.1/TIL
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
