--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependency-injector = "^4.44.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 bcrypt = "3.2.0"
 pydantic = {extras = ["email"], version = "^2.10.5"}
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+python-multipart = "^0.0.20"
 
 
 [build-system]
