--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ bcrypt = "3.2.0"
 pydantic = {extras = ["email"], version = "^2.10.5"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.20"
+python-dotenv = "^1.0.1"
+pydantic-settings = "^2.7.1"
+celery = "^5.4.0"
+eventlet = "^0.38.2"
 
 
 [build-system]
